--- a/templates/404.html
+++ b/templates/404.html
@@ -4,10 +4,10 @@
 {% block content %} 
 
 <div class="container py-5">
-    <div class="row">
+    <div class="row justify-content-center">
         <div class="col-md-8 offset-md-2">
             <h1 class="text-center">Oops! This page doesn't exists.</h1>
-            <p class="text-center">Sorry, you've encountered a 404 error. Please try again</p>
+            <p class="text-center">Sorry, you've encountered a 404 error. Please try again.</p>
             <a href="{% url 'home' %}" class="btn">Home</a>
         </div>
     </div>
