--- a/templates/base.html
+++ b/templates/base.html
@@ -50,6 +50,9 @@
               <a class="nav-link" href="{% url 'create_post' %}">Create Post</a>
             </li>
             <li class="nav-item">
+              <a class="nav-link" href="#">Profile</a>
+            </li>
+            <li class="nav-item">
               <a class="nav-link" href="{% url 'account_logout' %}">Logout</a>
             </li>
             {% else %}
