--- a/templates/base.html
+++ b/templates/base.html
@@ -50,7 +50,7 @@
               <a class="nav-link" href="{% url 'create_post' %}">Create Post</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="#">Profile</a>
+              <a class="nav-link" href="{% url 'users:profile' %}">Profile</a>
             </li>
             <li class="nav-item">
               <a class="nav-link" href="{% url 'account_logout' %}">Logout</a>
