--- a/users/templates/users/profile.html
+++ b/users/templates/users/profile.html
@@ -1,19 +1,26 @@
 {% extends "base.html" %}
+{% load crispy_forms_tags %}
 {% block content %}
 
 
 <div class="container">
     <div class="row justify-content-center">
-      <div class="col-11 col-md-6 col-lg-5 col-xl-4 p-5 mb-5 card-welcome border border-dark border-2 rounded-3">
-            {% if "placeholder" in user.profile.image.url %}
+      <div class="col-11 col-md-6 col-lg-5 col-xl-4 p-5 mb-5 card-welcome border border-dark border-2 rounded-3 justify-content-center">
+        {% if "placeholder" in user.profile.image.url %}
             <img class="card-img-top" src="https://res.cloudinary.com/dcydt01ed/image/upload/v1692914772/default_nn12yl.png">
                 {% else %}
             <img class="card-img-top" src=" {{ user.profile.image.url }}">
-            {% endif %}
-      <div>
+                {% endif %}
+        <div class="media-body">
           <h2>{{ user.username }}</h2>
           <p>{{ user.email }}</p>
+        </div>
+      </div>
+      <form method="post">
+        <div class="form-group">
+            {% csrf_token %}
+            {{ profile_form | crispy }}
+        </div>
+    </form>
     </div>
-</div>
-
 {% endblock content %}
