--- a/users/templates/users/profile.html
+++ b/users/templates/users/profile.html
@@ -1,26 +1,38 @@
 {% extends "base.html" %}
+
 {% load crispy_forms_tags %}
+
+{% load static % }
+
 {% block content %}
 
 
-<div class="container">
-    <div class="row justify-content-center">
-      <div class="col-11 col-md-6 col-lg-5 col-xl-4 p-5 mb-5 card-welcome border border-dark border-2 rounded-3 justify-content-center">
-        {% if "placeholder" in user.profile.image.url %}
-            <img class="card-img-top" src="https://res.cloudinary.com/dcydt01ed/image/upload/v1692914772/default_nn12yl.png">
-                {% else %}
-            <img class="card-img-top" src=" {{ user.profile.image.url }}">
-                {% endif %}
-        <div class="media-body">
-          <h2>{{ user.username }}</h2>
-          <p>{{ user.email }}</p>
-        </div>
-      </div>
-      <form method="post">
-        <div class="form-group">
-            {% csrf_token %}
-            {{ profile_form | crispy }}
-        </div>
-    </form>
+<div class="container form-style">
+    <div class="p-5 mb-5 card-welcome border border-dark border-2 rounded-3 justify-content-center">
+        <h1 class="card-title">Your Profile</h1>
+        <form method="post" enctype="multipart/form-data">
+        {% csrf_token %}
+        {{ form | crispy }}
+                <!-- Profile Image -->
+                    <img src="{{ profile.picture.url|default:'user-default_zft92h' }}" class="rounded-circle mx-auto d-block profile-pic" width="100" height="100"/>
+                <!-- Username -->
+                <div class="form-group ">
+                    <label>Username:</label>
+                    {{ user_form.username }}
+                </div>
+                <!-- Location-->
+                <div class="form-group ">
+                    <label>Location:</label>
+                    {{ profile_form.location }}
+                </div>
+                <div class="form-group ">
+                    <label>Bio:</label> 
+                    {{ profile_form.bio }}
+                </div>
+            </div>
+                <div><button class="btn">Update profile</button></div>
     </div>
-{% endblock content %}
+        </form>
+</div>
+
+{% endblock %}
