--- a/users/templates/users/profile.html
+++ b/users/templates/users/profile.html
@@ -10,25 +10,16 @@
 <div class="container form-style">
     <div class="p-5 mb-5 card-welcome border border-dark border-2 rounded-3 justify-content-center">
         <h1 class="card-title">Your Profile</h1>
+                        <!-- Username -->
+                        <div class="form-group ">
+                            <label>Username:</label>
+                            {{ user_form.username }}
+                        </div>
         <form method="post" enctype="multipart/form-data">
         {% csrf_token %}
-        {{ form | crispy }}
+        {{ profile_form | crispy }}
                 <!-- Profile Image -->
                     <img src="{{ profile.picture.url|default:'user-default_zft92h' }}" class="rounded-circle mx-auto d-block profile-pic" width="100" height="100"/>
-                <!-- Username -->
-                <div class="form-group ">
-                    <label>Username:</label>
-                    {{ user_form.username }}
-                </div>
-                <!-- Location-->
-                <div class="form-group ">
-                    <label>Location:</label>
-                    {{ profile_form.location }}
-                </div>
-                <div class="form-group ">
-                    <label>Bio:</label> 
-                    {{ profile_form.bio }}
-                </div>
             </div>
                 <div><button class="btn">Update profile</button></div>
     </div>
