--- a/users/templates/users/profile.html
+++ b/users/templates/users/profile.html
@@ -10,16 +10,19 @@
 <div class="container form-style">
     <div class="p-5 mb-5 card-welcome border border-dark border-2 rounded-3 justify-content-center">
         <h1 class="card-title">Your Profile</h1>
+        <form method="post" enctype="multipart/form-data">
+            {% if user.profile.image %}
+            <img src="{{ user.profile.image.url }}" alt="User Image" width="100%">
+            {% else %}
+            <img class="img-responsive" src="https://res.cloudinary.com/dcydt01ed/image/upload/v1692922372/media/default_xzfwml.png" width="100%">
+            {% endif %}
                         <!-- Username -->
                         <div class="form-group ">
                             <label>Username:</label>
                             {{ user_form.username }}
                         </div>
-        <form method="post" enctype="multipart/form-data">
-        {% csrf_token %}
-        {{ profile_form | crispy }}
-                <!-- Profile Image -->
-                    <img src="{{ profile.picture.url|default:'user-default_zft92h' }}" class="rounded-circle mx-auto d-block profile-pic" width="100" height="100"/>
+                        {% csrf_token %}
+                        {{ profile_form | crispy }}
             </div>
                 <div><button class="btn">Update profile</button></div>
     </div>
