--- a/templates/post_detail.html
+++ b/templates/post_detail.html
@@ -97,7 +97,13 @@
                 {% if user.is_authenticated %}
 
                 <h3>Leave a comment:</h3>
-                <p>Posting as: {{ user.username }}</p>
+                <p>Posting as: {{ user.username }} 
+                    {% if user.profile.image %}
+                    <img src="{{ user.profile.image.url }}" alt="User Image" width="100%">
+                    {% else %}
+                    <img src="https://res.cloudinary.com/dcydt01ed/image/upload/v1692970959/default_zitnfg.png" alt="User Image" width="100%">
+                    {% endif %}
+                </p>
                 <form method="post" style="margin-top: 1.3em;">
                     {{ comment_form | crispy }}
                     {% csrf_token %}
